--- a/elos.html
+++ b/elos.html
@@ -17,8 +17,19 @@
                 </a>
                 <ul class="nav-list">
                     <a class="btn" href="elos.html">Home</a>
+                    <ol class="dropdown">
                     <a class="btn" href="uv.html">Uv/Uvv</a>
+                    <div class="dropdown-menu"><br>
+                        <a class="btn" href="torres.html">torres</a><br>
+                        <a class="btn" href="vasosuv.html">vasos</a>
+                    </div></ol>
+                    <ol class="dropdown">
                     <a class="btn" href="UT-1.html">UT-1</a>
+                    <div class="dropdown-menu"><br>
+                        <a class="btn" href="torresut.html">Torres</a><br>
+                        <a class="btn" href="vasosut.html">Vasos</a><br>
+                        <a class="btn" href="permutadores.html">Permutadores</a>
+                    </div>
                 </ul>
             </nav>
             <section class="banner">
@@ -32,8 +43,7 @@
 
     <main>
         <section class="parada-rpbc" style="background-image: url('img/backcinza.jpg!d');">
-            <h3><center>Planejamento Elos 2024 - PARADA DE MANUETNÇÃO RPBC</center></h3>
-            <p><center></center></p><br>
+            <h3><center>Planejamento Elos 2024 - PARADA DE MANUETNÇÃO RPBC</center></h3><br>
             <div class="slider1">
                 <div class="slides">
                     <input type="radio" name="radio-btn" id="radio1">
@@ -120,7 +130,7 @@
         <div class="container">
             <img src="img/marca_elos_header.png" alt="">
             <strong><p>Planejamento Elos</p></strong>
-            <p>O Planejamento é nosso caminho da Segurança</p>
+            <p>Planejamento é sempre o caminho para uma boa segurança no trabalho</p>
         </div>
     </footer>
 
