--- a/permutadores.html
+++ b/permutadores.html
@@ -9,23 +9,45 @@
     <title>Permutadores de Alta</title>
 </head>
 <body>
-    <header style="background-image: url('img/bateria\ trocadores\ de\ alta.jpg')">
+    <header style="background-image: url('img/trocadores\ de\ alta\ .jpg')">
         <div class="container">
             <nav>
                 <a href="elos.html">
                     <img src="img/marca_elos_header.png" alt="logoelos">
                 </a>
                 <ul class="ul">
-                    <a class="btn" href="elos.html">Home</a>
-                    <a class="btn" href="uv.html">Uv/Uvv</a>
-                    <a class="btn" href="UT-1.html">UT-1</a>
+                    <ol class="dropdown">
+                    <a class="btn" href="vasosut.html">Vasos</a>
+                    <div class="dropdown-menu"><br>
+                        <a class="btn" href="22313-18.html">V-22313-18</a><br>
+                        <a class="btn" href="5126-01.html">V-5126-01</a>
+                    </div></ol>
+                    <ol class="dropdown">
+                    <a class="btn" href="torresut.html">Torres</a>
+                    <div class="dropdown-menu"><br>
+                        <a class="btn" href="2323-02.html">T-2323-02</a><br>
+                        <a class="btn" href="2323-03">T-2323-03</a>
+                    </div></ol>
+
+                    <ol class="dropdown">
+                        <a class="btn" href="permutadores.html">Permutadores</a>
+                        <div class="dropdown-menu"><br>
+                            <a class="btn" href="2231303-ab.html">P-22313-03 A/B</a><br>
+                            <a class="btn" href="2231303-c.html">P-22313-03 C</a><br>
+                            <a class="btn" href="22313-04.html">P-22313-04</a><br>
+                            <a class="btn" href="22313-05.html">P-22313-05</a><br>
+                            <a class="btn" href="22313-06a.html">P-22313-06 A</a><br>
+                            <a class="btn" href="22313-06b.html">P-22313-06 B</a><br>
+                            <a class="btn" href="22313-07a.html">P-22313-07 A</a><br>
+                            <a class="btn" href="22313-07b.html">P-22313-07 B</a>
+                        </div>
                 </ul>
                
                 </div>                
             </nav>
             <section class="banner" >
                 <div class="banner-text">
-                    <h1>Permutadores de Alta</h1>
+                    <h1>Trocadores de Alta</h1>
                     <p></p>
                 </div>
             </section>
