--- a/torres.html
+++ b/torres.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -15,17 +16,39 @@
                     <img src="img/marca_elos_header.png" alt="logoelos">
                 </a>
                 <ul class="ul">
-                    <a class="btn" href="elos.html">Home</a>
-                    <a class="btn" href="uv.html">Uv/Uvv</a>
+
+                    <ol class="dropdown">
+                    <a class="btn" href="torres.html">Torres</a>
+                    <div class="dropdown-menu"><br>
+                        <a class="btn" href="torres.html">N-2601</a><br>
+                        <a class="btn" href="torres.html">N-6</a><br>
+                        <a class="btn" href="torres.html">N-28</a><br>
+                        <a class="btn" href="torres.html">N-29</a><br>
+                        <a class="btn" href="torres.html">N-30</a>
+                    </div></ol>   
+
+                    <ol class="dropdown">
+                    <a class="btn" href="vasosuv.html">Vasos</a>
+                    <div class="dropdown-menu"><br>
+                        <a class="btn" href="vasosuv.html">O-0201</a><br>
+                        <a class="btn" href="vasosuv.html">O-0203</a>
+                    </div></ol>
+                    
+                    <ol class="dropdown">
                     <a class="btn" href="UT-1.html">UT-1</a>
+                    <div class="dropdown-menu"><br>
+                        <a class="btn" href="torresut.html">Torres</a><br>
+                        <a class="btn" href="vasosut.html">Vasos</a><br>
+                        <a class="btn" href="permutadores.html">Permutadores</a>
+                    </div></ol>
                 </ul>
                
                 </div>                
             </nav>
             <section class="banner" >
                 <div class="banner-text">
-                    <h1>UV/UVV</h1>
-                    <p><b>unidade de vácuo e deslitação</b></p>
+                    <h1>TORRES UV/UVV</h1>
+                    <p><b></b></p>
                 </div>
             </section>
         </div>
@@ -37,7 +60,7 @@
                 <img src="img/Mídia (9).jpg" alt="">
             </div>
             <div class="unidade-uv-text">
-                <h3>N-2601 Torre de Vácuo</h3>
+                <h3>N-2601 Torre de Vácuo - UVV</h3>
                 <p><ol>Dar acesso pelo lado externo da torre a todas as conexões e região de topo até 1,0m abaixo do 2º anel 
                     anti-vácuo, para inspeção do costado e calota de topo.<br>
                     Preparar pontos para medição de espessura com ultra-som em 29 RM’s, sendo 8 no casco/calotas e 21 
@@ -67,7 +90,7 @@
                 <img src="img/interno N6.jpg" alt="">
             </div>
             <div class="unidade-uv-text">
-                <h3>N-6 Fracionadora</h3>
+                <h3>N-6 Fracionadora - UV</h3>
                 <p><b>Externo:</b><br>
                     Abertura de bocas-de-visita para inspeção e limpeza.<br>
                     Inspeção visual geral e medição de espessura por ultrassom.<br>
@@ -91,7 +114,7 @@
                 <img src="img/Mídia (13).jpg" alt="">
             </div>
             <div class="unidade-uv-text">
-                <h3>N-28 Retificadora de Diesel Pesado </h3>
+                <h3>N-28 Retificadora de Diesel Pesado - UV</h3>
                 <p> 
                     <ol>Abrir as 2 bocas-de-visita do equipamento. 
                         Executar limpeza (GL-1) na face de vedação dos flanges e as respectivas tampas das bocas de-visita para inspeção visual.<br> 
@@ -124,7 +147,7 @@
                 <img src="img/Mídia (18).jpg" alt="">
             </div>
             <div class="unidade-uv-text">
-                <h3>N-29 Retificadora de Diesel Leve</h3>
+                <h3>N-29 Retificadora de Diesel Leve - UV</h3>
                 <p><ol>Abrir as 2 bocas-de-visita do equipamento. 
                     Executar limpeza (GL-1) na face de vedação dos flanges e as respectivas tampas das bocas de-visita para inspeção visual.<br> 
                     Executar inspeção visual na face de vedação dos flanges e tampas das BV´s.<br> 
@@ -153,7 +176,7 @@
                 <img src="img/Mídia (17).jpg" alt="">
             </div>
             <div class="unidade-uv-text">
-                <h3>N-30 Retificadora de Querosene</h3>
+                <h3>N-30 Retificadora de Querosene - UV</h3>
                 <p><ol>Abrir as 2 bocas-de-visita do equipamento<br>
                     Executar inspeção visual geral externa da torre<br>
                     Preparar os 10 RM’s de 50mm X 50mm, para medição de espessura (GL-3), conforme indicado 
