--- a/uv.html
+++ b/uv.html
@@ -16,9 +16,19 @@
                     <img src="img/marca_elos_header.png" alt="logoelos">
                 </a>
                 <ul class="ul">
-                    <a class="btn" href="elos.html">Home</a>
+                    <ol class="dropdown">
                     <a class="btn" href="uv.html">Uv/Uvv</a>
+                    <div class="dropdown-menu"><br>
+                        <a class="btn" href="torres.html">Torres</a><br>
+                        <a class="btn" href="vasosuv.html">Vasos</a>
+                    </div></ol>
+                    <ol class="dropdown">
                     <a class="btn" href="UT-1.html">UT-1</a>
+                    <div class="dropdown-menu"><br>
+                        <a class="btn" href="torresut.html">Torres</a><br>
+                        <a class="btn" href="vasosut.html">Vasos</a><br>
+                        <a class="btn" href="permutadores.html">Permutadores</a>
+                    </div></ol>
                 </ul>
                
                 </div>                
@@ -36,14 +46,11 @@
     <section class="unidade-uv" style="background-image: url('img/backcinza.jpg!d');">
         <div class="container">
             <div class="unidade-uv-text" >
-                <h3>Unidade de Destilação atmosférica e Unidade de Destilação a Vácuo</h3><br>
+                <h3>Unidade de Destilação e Unidade de Destilação a Vácuo</h3><br>
                 <p>Apresentamos o escopo completo das paradas das unidades UV/UVV. 
                    Nossos serviços são realizados com excelência, alta qualidade e acima de tudo, 
                    com o máximo compromisso com a segurança.</p><br>
-                <ul>
-                    <li><a href="torres.html">Torres</a></li>
-                    <li><a href="vasosuv.html">Vasos Uv / Uvv</a></li>
-                </ul>
+                <ul></ul>
                  
             </div>
             <div class="unidade-uv-img">
