--- a/22313-18.html
+++ b/22313-18.html
@@ -6,10 +6,10 @@
     <link rel="icon"
     href="img/thelos.png">
     <link rel="stylesheet" href="style.css">
-    <title>Vasos UT-1</title>
+    <title>V-22313-18</title>
 </head>
 <body>
-    <header style="background-image: url('img/vasos/5126-01\ att3.jpg')">
+    <header style="background-image: url('img/V-22313-18\ \(13\).jpg')">
         <div class="container">
             <nav>
                 <a href="elos.html">
@@ -19,16 +19,17 @@
                     <ol class="dropdown">
                     <a class="btn" href="vasosut.html">Vasos</a>
                     <div class="dropdown-menu"><br>
-                        <a class="btn" href="22313-18.html">V-22313-18</a><br>
-                        <a class="btn" href="5126-01.html">V-5126-01</a>
+                        <a class="btn" href="5126-01.html">V-5126-01</a><br>
+                        <a class="btn" href="22313-18.html">V-22313-18</a>
                     </div></ol>
 
                     <ol class="dropdown">
                     <a class="btn" href="torresut.html">Torres</a>
                     <div class="dropdown-menu"><br>
-                        <a class="btn" href="2323-02.html">T-2323-02</a><br>
-                        <a class="btn" href="2323-03.html">T-2323-03</a>
+                        <a class="btn" href="elos.html">T-2323-02</a><br>
+                        <a class="btn" href="elos.html">T-2323-03</a>
                     </div></ol>
+
                     <ol class="dropdown">
                     <a class="btn" href="permutadores.html">Permutadores</a>
                     <div class="dropdown-menu"><br>
@@ -40,73 +41,20 @@
                         <a class="btn" href="22313-06b.html">P-22313-06 B</a><br>
                         <a class="btn" href="22313-07a.html">P-22313-07 A</a><br>
                         <a class="btn" href="22313-07b.html">P-22313-07 B</a>
-                    </div>
+                    </div></ol>
                 </ul>
                
                 </div>                
             </nav>
             <section class="banner" >
                 <div class="banner-text">
-                    <h1>VASOS UT-1</h1>
+                    <h1>V-22313-18</h1>
                     <p><b></b></p>
                 </div>
             </section>
         </div>
     </header>
 
-    <section class="unidade-uv" style="background-image: url('img/backcinza.jpg!d');">
-        <div class="container">
-            <div class="unidade-uv-img">
-                <img src="img/V-5126-01 (6).jpg" alt="">
-                <img src="img/V-5126-01 (15).jpg" alt="">
-                <img src="img/5126-01 att2.jpg" alt="">
-                <img src="img/5126-01 att1.jpg" alt="">
-                <img src="img/5126-01 att3.jpg" alt="">
-            </div>
-            <div class="unidade-uv-text">
-                <right><h3>V-5126-01</h3>
-                <p>
-                    <ol>
-                        <b>Geral:</b>
-
-                        Avaliar a remoção do isolamento térmico do vaso junto à OTIMIZAÇÃO e PRODUÇÃO/HDT.<br>
-                        Emitir SGM para aprovar a mudança.<br>
-                        Ações sugeridas:<br>
-
-                        Pintar as áreas expostas após remoção do isolamento térmico.<br>
-                        Recuperar o isolamento térmico.<br>
-                        Pintar a base metálica (lado sul).<br>
-                        Substituir os demisters principais e o da conexão 2.<br>
-                        Substituir as conexões 8B, 10, 12A, 18 e 21.<br>
-                        Substituir flanges das conexões 12A, 12B e 15A.<br>
-                        Realizar enchimento com solda no casco onde houver perda de espessura por corrosão.<br>
-                        Aplicar revestimento de pintura Novolac, adequado para 60°C, após remoção do isolamento térmico.<br>
-                        <b>Externo:</b><br>
-
-                        Montar acesso, exaustão e iluminação, realizar inspeção visual das estruturas.<br>
-                        Realizar ensaio de medição de espessura em 21 pontos.<br>
-                        Inspecionar externamente o equipamento, incluindo suporte, olhal de içamento, isolamento térmico, concreto fire proof, e aterramento.<br>
-                        Martelar conexões soldadas de até 2", exceto acessórios roscados.<br>
-                        Conexões, Niples e Acessórios:<br>
-
-                        Abrir todas as bocas de visita, limpar sedes de vedação e inspecionar os flanges.<br>
-                        Proteger as sedes de vedação com discos de madeira após inspeção.<br>
-                        Desconectar e afastar flanges com sinais de vazamento, limpar e inspecionar.<br>
-                        Remover e limpar plugues e niples roscados para inspeção visual e verificação de espessura.<br>
-                        Inspecionar estojos e porcas de todos os flanges.<br>
-                        <b>Interno:</b><br>
-
-                        Providenciar iluminação e acesso para limpeza interna.<br>
-                        Montar escadas e andaimes internos.<br>
-                        Realizar inspeção visual interna preliminar.<br>
-                        Remover e inspecionar o demister.<br>
-                        Preparar e realizar ensaio com partículas magnéticas na solda interna da BV superior e em conexões selecionadas.<br>
-                        Reparar pintura interna nas áreas inspecionadas.
-                    </ol>
-                </p>
-            </div>
-       </div>
-    </section>
 
     <section class="unidade-uv" style="background-image: url('img/backcinza.jpg!d');">
         <div class="container">
