--- a/vasosuv.html
+++ b/vasosuv.html
@@ -9,24 +9,43 @@
     <title>Vasos uv/uvv</title>
 </head>
 <body>
-    <header style="background-image: url('img/Mídia\ \(17\).jpg')">
+    <header style="background-image: url('img/O-0203\ \(1\).jpg')">
         <div class="container">
             <nav>
                 <a href="elos.html">
                     <img src="img/marca_elos_header.png" alt="logoelos">
                 </a>
                 <ul class="ul">
-                    <a class="btn" href="elos.html">Home</a>
-                    <a class="btn" href="uv.html">Uv/Uvv</a>
+                    <ol class="dropdown">
+                    <a class="btn" href="torres.html">Torres</a>
+                    <div class="dropdown-menu"><br>
+                        <a class="btn" href="torres.html">N-2601</a><br>
+                        <a class="btn" href="torres.html">N-6</a><br>
+                        <a class="btn" href="torres.html">N-28</a><br>
+                        <a class="btn" href="torres.html">N-29</a><br>
+                        <a class="btn" href="torres.html">N-30</a>
+                    </div></ol>
+                    <ol class="dropdown">
+                    <a class="btn" href="vasosuv.html">Vasos</a>
+                    <div class="dropdown-menu"><br>
+                        <a class="btn" href="vasosuv.html">O-0201</a><br>
+                        <a class="btn" href="vasosuv.html">O-0203</a>
+                    </div></ol>
+                    <ol class="dropdown">
                     <a class="btn" href="UT-1.html">UT-1</a>
+                    <div class="dropdown-menu"><br>
+                        <a class="btn" href="torresut.html">Torres</a><br>
+                        <a class="btn" href="vasosut.html">Vasos</a><br>
+                        <a class="btn" href="permutadores.html">Permutadores</a>
+                    </div>
                 </ul>
                
                 </div>                
             </nav>
             <section class="banner" >
                 <div class="banner-text">
-                    <h1>UV/UVV</h1>
-                    <p><b>unidade de vácuo e deslitação</b></p>
+                    <h1> VASOS UV/UVV</h1>
+                    <p></p>
                 </div>
             </section>
         </div>
