--- a/vasosut.html
+++ b/vasosut.html
@@ -9,7 +9,7 @@
     <title>Vasos UT-1</title>
 </head>
 <body>
-    <header style="background-image: url('img/vasos/5126-01\ att3.jpg')">
+    <header style="background-image: url('img/V-5126-01\ \(6\).jpg')">
         <div class="container">
             <nav>
                 <a href="elos.html">
