--- a/22313-18.html
+++ b/22313-18.html
@@ -26,8 +26,8 @@
                     <ol class="dropdown">
                     <a class="btn" href="torresut.html">Torres</a>
                     <div class="dropdown-menu"><br>
-                        <a class="btn" href="elos.html">T-2323-02</a><br>
-                        <a class="btn" href="elos.html">T-2323-03</a>
+                        <a class="btn" href="2323-02.html">T-2323-02</a><br>
+                        <a class="btn" href="2323-03.html">T-2323-03</a>
                     </div></ol>
 
                     <ol class="dropdown">
