--- a/2323-03.html
+++ b/2323-03.html
@@ -22,7 +22,12 @@
                         <a class="btn" href="2323-02.html">T-2323-02</a><br>
                         <a class="btn" href="2323-03.html">T-2323-03</a>
                     </div></ol>
+                    <ol class="dropdown">
                     <a class="btn" href="vasosut.html">Vasos</a>
+                    <div class="dropdown-menu"><br>
+                        <a class="btn" href="5126-01.html">V-5126-01</a><br>
+                        <a class="btn" href="22313-18.html">V-22313-18</a>
+                    </div></ol>
                     <ol class="dropdown">
                     <a class="btn" href="permutadores.html">Permutadores</a>
                     <div class="dropdown-menu"><br>
