--- a/5126-01.html
+++ b/5126-01.html
@@ -16,7 +16,12 @@
                     <img src="img/marca_elos_header.png" alt="logoelos">
                 </a>
                 <ul class="ul">
-                    <a class="btn" href="elos.html">Home</a>
+                    <ol class="dropdown">
+                    <a class="btn" href="vasosut.html">Vasos</a>
+                    <div class="dropdown-menu"><br>
+                        <a class="btn" href="22313-18.html">V-22313-18</a><br>
+                        <a class="btn" href="5126-01.html">V-5126-01</a>
+                    </div></ol>
                     <ol class="dropdown">
                     <a class="btn" href="torresut.html">Torres</a>
                     <div class="dropdown-menu"><br>
