--- a/vasosuv.html
+++ b/vasosuv.html
@@ -28,8 +28,8 @@
                     <ol class="dropdown">
                     <a class="btn" href="vasosuv.html">Vasos</a>
                     <div class="dropdown-menu"><br>
-                        <a class="btn" href="vasosuv.html">O-0201</a><br>
-                        <a class="btn" href="vasosuv.html">O-0203</a>
+                        <a class="btn" href="0-0201.html">O-0201</a><br>
+                        <a class="btn" href="o-0203.html">O-0203</a>
                     </div></ol>
                     <ol class="dropdown">
                     <a class="btn" href="UT-1.html">UT-1</a>
