--- a/permutadores.html
+++ b/permutadores.html
@@ -9,7 +9,7 @@
     <title>Permutadores de Alta</title>
 </head>
 <body>
-    <header style="background-image: url('img/trocadores\ de\ alta\ .jpg')">
+    <header style="background-image: url('img/bateria\ alta\ pintada.jpg')">
         <div class="container">
             <nav>
                 <a href="elos.html">
