--- a/n2601.html
+++ b/n2601.html
@@ -27,7 +27,7 @@
                     <a class="btn" href="torres.html">Torres</a>
                     <div class="dropdown-menu"><br>
                         <a class="btn" href="n2601.html">N-2601</a><br>
-                        <a class="btn" href="torres.html">N-6</a><br>
+                        <a class="btn" href="n6.html">N-6</a><br>
                         <a class="btn" href="torres.html">N-28</a><br>
                         <a class="btn" href="torres.html">N-29</a><br>
                         <a class="btn" href="torres.html">N-30</a>
