--- a/vasosuv.html
+++ b/vasosuv.html
@@ -9,18 +9,26 @@
     <title>Vasos uv/uvv</title>
 </head>
 <body>
-    <header style="background-image: url('img/O-0203\ \(1\).jpg')">
+    <header style="background-image: url('img/vasosuv.jpg')">
         <div class="container">
             <nav>
                 <a href="elos.html">
                     <img src="img/marca_elos_header.png" alt="logoelos">
                 </a>
                 <ul class="ul">
+
+                    <ol class="dropdown">
+                        <a class="btn" href="elos.html">Home</a>
+                        <div class="dropdown-menu"><br>
+                            <a class="btn" href="UT-1.html">UT-1</a><br>
+                            <a class="btn" href="uv.html">Uv/uvv</a>
+                    </div></ol>
+
                     <ol class="dropdown">
                     <a class="btn" href="torres.html">Torres</a>
                     <div class="dropdown-menu"><br>
-                        <a class="btn" href="torres.html">N-2601</a><br>
-                        <a class="btn" href="torres.html">N-6</a><br>
+                        <a class="btn" href="n2601.html">N-2601</a><br>
+                        <a class="btn" href="n6.html">N-6</a><br>
                         <a class="btn" href="torres.html">N-28</a><br>
                         <a class="btn" href="torres.html">N-29</a><br>
                         <a class="btn" href="torres.html">N-30</a>
@@ -31,13 +39,7 @@
                         <a class="btn" href="0-0201.html">O-0201</a><br>
                         <a class="btn" href="o-0203.html">O-0203</a>
                     </div></ol>
-                    <ol class="dropdown">
-                    <a class="btn" href="UT-1.html">UT-1</a>
-                    <div class="dropdown-menu"><br>
-                        <a class="btn" href="torresut.html">Torres</a><br>
-                        <a class="btn" href="vasosut.html">Vasos</a><br>
-                        <a class="btn" href="permutadores.html">Permutadores</a>
-                    </div>
+                  
                 </ul>
                
                 </div>                
