--- a/torres.html
+++ b/torres.html
@@ -29,16 +29,16 @@
                     <div class="dropdown-menu"><br>
                         <a class="btn" href="n2601.html">N-2601</a><br>
                         <a class="btn" href="n6.html">N-6</a><br>
-                        <a class="btn" href="torres.html">N-28</a><br>
-                        <a class="btn" href="torres.html">N-29</a><br>
-                        <a class="btn" href="torres.html">N-30</a>
+                        <a class="btn" href="n28.html">N-28</a><br>
+                        <a class="btn" href="n29.html">N-29</a><br>
+                        <a class="btn" href="n30.html">N-30</a>
                     </div></ol>   
 
                     <ol class="dropdown">
                     <a class="btn" href="vasosuv.html">Vasos</a>
                     <div class="dropdown-menu"><br>
-                        <a class="btn" href="vasosuv.html">O-0201</a><br>
-                        <a class="btn" href="vasosuv.html">O-0203</a>
+                        <a class="btn" href="0-0201.html">O-0201</a><br>
+                        <a class="btn" href="o-0203.html">O-0203</a>
                     </div></ol>
                 
                 </ul>
@@ -99,6 +99,14 @@
         <div class="container">
             <div class="unidade-uv-img">
                 <img src="img/Mídia (12).jpg" alt="">
+                <img src="img/CF_01367_17 - N-6 - bandea (1).JPG" alt="">
+                <img src="img/CF_01367_17 - N-6 - 1 - borbulhadores.JPG" alt="">
+                <img src="img/DSCN4428.JPG" alt="">
+                <img src="img/DSCN4456.JPG" alt="">
+                <img src="img/CF_01367_17 - N-6 -.JPG" alt="">
+                <img src="img/DSCN0812.JPG" alt="">
+                <img src="img/DSCN0813.JPG" alt="">
+                <img src="img/DSCN0814.JPG" alt="">
                 <img src="img/interno N6.jpg" alt="">
             </div>
             <div class="unidade-uv-text">
@@ -123,6 +131,13 @@
     <section class="unidade-uv" style="background-image: url('img/backcinza.jpg!d');">
         <div class="container">
             <div class="unidade-uv-img">
+                <img src="img/N-28 (2).jpg" alt="">
+                <img src="img/N-28 (1).jpg" alt="">
+                <img src="img/N-28 (10).jpg" alt="">
+                <img src="img/N-28 (11).jpg" alt="">
+                <img src="img/N-28 (12).jpg" alt="">
+                <img src="img/N-28 (13).jpg" alt="">
+                <img src="img/N-28 (18).jpg" alt="">
                 <img src="img/Mídia (13).jpg" alt="">
             </div>
             <div class="unidade-uv-text">
@@ -156,6 +171,18 @@
     <section class="unidade-uv" style="background-image: url('img/backcinza.jpg!d');">
         <div class="container">
             <div class="unidade-uv-img">
+                <img src="img/N-29 (12).jpg" alt="">
+                <img src="img/N-29 (1).jpg" alt="">
+                <img src="img/N-29 (10).jpg" alt="">
+                <img src="img/N-29 (11).jpg" alt="">
+                <img src="img/N-29 (2).jpg" alt="">
+                <img src="img/N-29 (3).jpg" alt="">
+                <img src="img/N-29 (4).jpg" alt="">
+                <img src="img/N-29 (5).jpg" alt="">
+                <img src="img/N-29 (6).jpg" alt="">
+                <img src="img/N-29 (7).jpg" alt="">
+                <img src="img/N-29 (8).jpg" alt="">
+                <img src="img/N-29 (9).jpg" alt="">
                 <img src="img/Mídia (18).jpg" alt="">
             </div>
             <div class="unidade-uv-text">
@@ -185,6 +212,18 @@
     <section class="unidade-uv" style="background-image: url('img/backcinza.jpg!d');">
         <div class="container">
             <div class="unidade-uv-img">
+                <img src="img/N-30 (10).jpg" alt="">
+                <img src="img/N-30 (11).jpg" alt="">
+                <img src="img/N-30 (12).jpg" alt="">
+                <img src="img/N-30 (13).jpg" alt="">
+                <img src="img/N-30 (14).jpg" alt="">
+                <img src="img/N-30 (15).jpg" alt="">
+                <img src="img/N-30 (16).jpg" alt="">
+                <img src="img/N-30 (5).jpg" alt="">
+                <img src="img/N-30 (6).jpg" alt="">
+                <img src="img/N-30 (7).jpg" alt="">
+                <img src="img/N-30 (8).jpg" alt="">
+                <img src="img/N-30 (9).jpg" alt="">
                 <img src="img/Mídia (17).jpg" alt="">
             </div>
             <div class="unidade-uv-text">
