--- a/5126-01.html
+++ b/5126-01.html
@@ -16,6 +16,13 @@
                     <img src="img/marca_elos_header.png" alt="logoelos">
                 </a>
                 <ul class="ul">
+                    <ol class="dropdown"></ol>
+                        <a class="btn" href="elos.html">Home</a>
+                        <div class="dropdown-menu"><br>
+                            <a class="btn" href="UT-1.html">UT-1</a><br>
+                            <a class="btn" href="uv.html">Uv/uvv</a>
+                    </div></ol>
+                    
                     <ol class="dropdown">
                     <a class="btn" href="vasosut.html">Vasos</a>
                     <div class="dropdown-menu"><br>
@@ -56,11 +63,24 @@
     <section class="unidade-uv" style="background-image: url('img/backcinza.jpg!d');">
         <div class="container">
             <div class="unidade-uv-img">
+                <img src="img/V-5126-01 1.jpg" alt="">
+                <img src="img/V-5126-01 (4).jpg" alt="">
                 <img src="img/V-5126-01 (6).jpg" alt="">
+                <img src="img/V-5126-01 (7).jpg" alt="">
+                <img src="img/V-5126-01 (8).jpg" alt="">
+                <img src="img/V-5126-01 (9).jpg" alt="">
+                <img src="img/V-5126-01 (10).jpg" alt="">
+                <img src="img/V-5126-01 (11).jpg" alt="">
+                <img src="img/V-5126-01 (13).jpg" alt="">
+                <img src="img/V-5126-01 (14).jpg" alt="">
                 <img src="img/V-5126-01 (15).jpg" alt="">
-                <img src="img/5126-01 att2.jpg" alt="">
+                <img src="img/V-5126-01 (22).jpg" alt="">
+                <img src="img/V-5126-01 (24).jpg" alt="">
+                <img src="img/V-5126-01 (28).jpg" alt="">
                 <img src="img/5126-01 att1.jpg" alt="">
+                <img src="img/5126-01 att2.jpg" alt="">
                 <img src="img/5126-01 att3.jpg" alt="">
+                <img src="img/5126-01 att4.jpg" alt="">
             </div>
             <div class="unidade-uv-text">
                 <right><h3>V-5126-01</h3>
