--- a/5126-01.html
+++ b/5126-01.html
@@ -9,7 +9,7 @@
     <title>V-5126-01</title>
 </head>
 <body>
-    <header style="background-image: url('img/V-5126-01\ \(6\).jpg')">
+    <header style="background-image: url('img/5126-01\ att3.jpg')">
         <div class="container">
             <nav>
                 <a href="elos.html">
