--- a/elos.html
+++ b/elos.html
@@ -17,19 +17,21 @@
                 </a>
                 <ul class="nav-list">
                     <a class="btn" href="elos.html">Home</a>
+                    
+                    <ol class="dropdown">
+                        <a class="btn" href="UT-1.html">UT-1</a>
+                        <div class="dropdown-menu"><br>
+                            <a class="btn" href="torresut.html">Torres</a><br>
+                            <a class="btn" href="vasosut.html">Vasos</a><br>
+                            <a class="btn" href="permutadores.html">Permutadores</a>
+                    </div></ol>
+                    
                     <ol class="dropdown">
                     <a class="btn" href="uv.html">Uv/Uvv</a>
                     <div class="dropdown-menu"><br>
                         <a class="btn" href="torres.html">torres</a><br>
                         <a class="btn" href="vasosuv.html">vasos</a>
                     </div></ol>
-                    <ol class="dropdown">
-                    <a class="btn" href="UT-1.html">UT-1</a>
-                    <div class="dropdown-menu"><br>
-                        <a class="btn" href="torresut.html">Torres</a><br>
-                        <a class="btn" href="vasosut.html">Vasos</a><br>
-                        <a class="btn" href="permutadores.html">Permutadores</a>
-                    </div>
                 </ul>
             </nav>
             <section class="banner">
