--- a/vasosuv.html
+++ b/vasosuv.html
@@ -25,14 +25,14 @@
                     </div></ol>
 
                     <ol class="dropdown">
-                    <a class="btn" href="torres.html">Torres</a>
-                    <div class="dropdown-menu"><br>
-                        <a class="btn" href="n2601.html">N-2601</a><br>
-                        <a class="btn" href="n6.html">N-6</a><br>
-                        <a class="btn" href="torres.html">N-28</a><br>
-                        <a class="btn" href="torres.html">N-29</a><br>
-                        <a class="btn" href="torres.html">N-30</a>
-                    </div></ol>
+                        <a class="btn" href="torres.html">Torres</a>
+                        <div class="dropdown-menu"><br>
+                            <a class="btn" href="n2601.html">N-2601</a><br>
+                            <a class="btn" href="n6.html">N-6</a><br>
+                            <a class="btn" href="n28.html">N-28</a><br>
+                            <a class="btn" href="n29.html">N-29</a><br>
+                            <a class="btn" href="n30.html">N-30</a>
+                        </div></ol>
                     <ol class="dropdown">
                     <a class="btn" href="vasosuv.html">Vasos</a>
                     <div class="dropdown-menu"><br>
