--- a/elos.html
+++ b/elos.html
@@ -30,7 +30,8 @@
                     <a class="btn" href="uv.html">Uv/Uvv</a>
                     <div class="dropdown-menu"><br>
                         <a class="btn" href="torres.html">torres</a><br>
-                        <a class="btn" href="vasosuv.html">vasos</a>
+                        <a class="btn" href="vasosuv.html">vasos</a><br>
+                        <a class="btn" href="permutuv-uvv.html">permutadores</a>
                     </div></ol>
                 </ul>
             </nav>
