--- a/n30.html
+++ b/n30.html
@@ -40,7 +40,13 @@
                         <a class="btn" href="0-0201.html">O-0201</a><br>
                         <a class="btn" href="o-0203.html">O-0203</a>
                     </div></ol>
-                
+
+                    <ol class="dropdown">
+                        <a class="btn" href="permutuv-uvv.html">Permutadores</a>
+                        <div class="dropdown-menu"><br>
+                            <a class="btn" href="M2604.html">M-2604</a><br>
+                            <a class="btn" href="M2607.html">M-2607</a>
+                        </div></ol>
                 </ul>
                
                 </div>                
