--- a/uv.html
+++ b/uv.html
@@ -33,6 +33,12 @@
                         <a class="btn" href="torres.html">Torres</a><br>
                         <a class="btn" href="vasosuv.html">Vasos</a>
                     </div></ol>
+                    <ol class="dropdown">
+                    <a class="btn" href="permutuv-uvv.html">Permutadores</a>
+                    <div class="dropdown-menu"><br>
+                        <a class="btn" href="M2604.html">M-2604</a><br>
+                        <a class="btn" href="M2607.html">M-2607</a>
+                    </div></ol>
                 </ul>
                </div>                
             </nav>
