--- a/22313-18.html
+++ b/22313-18.html
@@ -9,7 +9,7 @@
     <title>V-22313-18</title>
 </head>
 <body>
-    <header style="background-image: url('img/V-22313-18\ \(13\).jpg')">
+    <header style="background-image: url('img/vaso18.2.jpg')">
         <div class="container">
             <nav>
                 <a href="elos.html">
@@ -68,7 +68,7 @@
             <div class="unidade-uv-img">
                 <img src="img/vaso 18.jpg" alt="">
                 <img src="img/V-22313-18 (13).jpg" alt="">
-                <img src="img/vaso 18 pintura.jpg" alt="">
+                <img src="img/vaso18.jpg" alt="">
                 <img src="img/V-22313-18 (15).jpg" alt="">
                 <img src="img/grade de piso 18.jpg" alt="">
                 <img src="img/grade pintada v18.jpg" alt="">
