--- a/n29.html
+++ b/n29.html
@@ -64,6 +64,8 @@
     <section class="unidade-uv" style="background-image: url('img/backcinza.jpg!d');">
         <div class="container">
             <div class="unidade-uv-img">
+                <img src="img/Mídia (17).jpg" alt="">
+                <img src="img/n28-29-30.png" alt="">
                 <img src="img/N-29 (12).jpg" alt="">
                 <img src="img/N-29 (1).jpg" alt="">
                 <img src="img/N-29 (10).jpg" alt="">
