--- a/torres.html
+++ b/torres.html
@@ -136,6 +136,8 @@
     <section class="unidade-uv" style="background-image: url('img/backcinza.jpg!d');">
         <div class="container">
             <div class="unidade-uv-img">
+                <img src="img/Mídia (17).jpg" alt="">
+                <img src="img/n28-29-30.png" alt="">
                 <img src="img/N-28 (2).jpg" alt="">
                 <img src="img/N-28 (1).jpg" alt="">
                 <img src="img/N-28 (10).jpg" alt="">
@@ -176,6 +178,8 @@
     <section class="unidade-uv" style="background-image: url('img/backcinza.jpg!d');">
         <div class="container">
             <div class="unidade-uv-img">
+                <img src="img/Mídia (17).jpg" alt="">
+                <img src="img/n28-29-30.png" alt="">
                 <img src="img/N-29 (12).jpg" alt="">
                 <img src="img/N-29 (1).jpg" alt="">
                 <img src="img/N-29 (10).jpg" alt="">
@@ -217,6 +221,8 @@
     <section class="unidade-uv" style="background-image: url('img/backcinza.jpg!d');">
         <div class="container">
             <div class="unidade-uv-img">
+                <img src="img/Mídia (17).jpg" alt="">
+                <img src="img/n28-29-30.png" alt="">
                 <img src="img/N-30 (10).jpg" alt="">
                 <img src="img/N-30 (11).jpg" alt="">
                 <img src="img/N-30 (12).jpg" alt="">
