--- a/elos.html
+++ b/elos.html
@@ -46,7 +46,7 @@
 
     <main>
         <section class="parada-rpbc" style="background-image: url('img/backcinza.jpg!d');">
-            <h3><center>Planejamento Elos 2024 - PARADA DE MANUTENÇÃO RPBC</center></h3><br>
+            <h3><center>Planejamento Elos 2024 - PARADA DE MANUETNÇÃO RPBC</center></h3><br>
             <div class="slider1">
                 <div class="slides">
                     <input type="radio" name="radio-btn" id="radio1">
@@ -61,7 +61,7 @@
                         <img src="img/sms elos 5.1.jpeg"/>
                     </div>
                     <div class="slide2">
-                        <img src="img/piramide.jpeg"/>
+                        <img src="img/piramide_resized_resized_resized.jpeg"/>
                     </div>
                     <div class="slide3">
                         <img src="img/slide tempo.png"/>
