--- a/o-0203.html
+++ b/o-0203.html
@@ -28,9 +28,7 @@
                             <div class="dropdown-menu"><br>
                                 <a class="btn" href="n2601.html">N-2601</a><br>
                                 <a class="btn" href="n6.html">N-6</a><br>
-                                <a class="btn" href="n28.html">N-28</a><br>
-                                <a class="btn" href="n29.html">N-29</a><br>
-                                <a class="btn" href="n30.html">N-30</a>
+                                <a class="btn" href="n28.html">N-28 N-29 N-30</a><br>
                             </div></ol>   
     
                         <ol class="dropdown">
