--- a/uv.html
+++ b/uv.html
@@ -31,14 +31,10 @@
                     <a class="btn" href="uv.html">Uv/Uvv</a>
                     <div class="dropdown-menu"><br>
                         <a class="btn" href="torres.html">Torres</a><br>
-                        <a class="btn" href="vasosuv.html">Vasos</a>
+                        <a class="btn" href="vasosuv.html">Vasos</a><br>
+                        <a class="btn" href="permutuv-uvv.html">Permutadores</a>
                     </div></ol>
-                    <ol class="dropdown">
-                    <a class="btn" href="permutuv-uvv.html">Permutadores</a>
-                    <div class="dropdown-menu"><br>
-                        <a class="btn" href="M2604.html">M-2604</a><br>
-                        <a class="btn" href="M2607.html">M-2607</a>
-                    </div></ol>
+                   
                 </ul>
                </div>                
             </nav>
