--- a/uv.html
+++ b/uv.html
@@ -9,7 +9,7 @@
     <title>Unidade Uv / Uvv</title>
 </head>
 <body>
-    <header style="background-image: url('img/Mídia\ \(15\).jpg');">
+    <header style="background-image: url('img/UVUVV.jpg');">
         <div class="container">
             <nav>
                 <a href="elos.html">
